added fonts and caption

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>SpongBob SquarePants</title>
     <link rel="icon" href="img/spongebob.png">
-    <link href="" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 
@@ -22,7 +22,7 @@
         <p>He is everyones best friend. He live in a pineapple under the sea.</p>
         <img src="img/spongebob_friends.png" alt="SpongBob and Friends">
         <br>
-        <p>SpongeBob and Friends</p>
+        <p class="caption">SpongeBob and Friends</p>
 
         <!-- Characteristics -->
         <h2>SpongeBob's Characteristics</h2>
